# SRIPType

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sriptype
conda/: meta.yaml
db/: SINE-head100.nhr  SINE-head100.nin  SINE-head100.njs  SINE-head100.nsq  rip-r110.ndb  rip-r110.nhr  rip-r110.njs  rip-r110.nsq
sriptype_modules/: __init__.py  cli.py  core.py  utils.py
sriptype_modules/data/: 51krip-array-ref.txt  SINE-head100.ndb  SINE-head100.not  SINE-head100.nto  rip-r110.nin  rip-r110.not  rip-r110.nto  rip-shiftL5-l50.fasta
sriptype_modules/subcommands/: __init__.py  genotype.py  merge.py  mkdb.py
