[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sriptype"
version = "0.1.0"
description = "SRIPType - A bioinformatics tool for 51k-SINE-RIP chip genotyping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SRIPType Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
sriptype = "sriptype_modules.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/SRIPType"
Repository = "https://github.com/your-org/SRIPType"

[tool.setuptools.packages.find]
include = ["sriptype_modules*"]

[tool.setuptools.package-data]
sriptype_modules = ["data/*"]
